syntax = "proto3";
package pb;


service Firewall {
    rpc Ban (BanRequest) returns (BanResponse) {}
    rpc Unban (UnbanRequest) returns (UnbanResponse) {}
    rpc ListBanned (ListBannedRequest) returns (ListBannedResponse) {}
}


message BanRequest {
    string ip = 1;
}
message BanResponse {
}

message UnbanRequest {
    string ip = 1;
}
message UnbanResponse{
}


message ListBannedRequest {
}
message ListBannedResponse {
    map<string, uint32> ip = 1;
}